# filterGaussian

./: CMakeLists.txt  README.md  readme.txt
clip/: config.txt
filterLib/: CMakeLists.txt
filterLib/include/: factory.h  filter.h  gaussCPU.h  gaussGPU.h  logging.h  paramCaptGPU.h
filterLib/src/: factory.cpp  logging.cpp  paramCaptGPU.cpp
filterLib/src/cpu/: gaussCPU.cpp
filterLib/src/gpu/: gaussGPU.cpp
gaussClient/include/: bufferManager.h  captureFrameCPU.h  captureFrameGPU.h  captureFrameInterface.h  gauss.h  macro.h  propertiesCPUGPU.h  readWriteFile.h  threadPool.h  validationCPUGPU.h
gaussClient/src/: bufferManager.cpp  captureFrameCPU.cpp  captureFrameGPU.cpp  captureFrameInterface.cpp  gauss.cpp  main.cpp  propertiesCPUGPU.cpp  readWriteFile.cpp  validationCPUGPU.cpp
gaussClient/src/gpu/: gaussKern.cl
projects/: _3D_Gauss.vcxproj  _3D_Gauss.vcxproj.filters  gaussianFilter.sln
